--- a/apps/funding/package.json
+++ b/apps/funding/package.json
@@ -10,6 +10,7 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^3.6.1",
     "next": "^16.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
